--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         </div>
       </section>
 
-      <img src="dice-5.png" alt="Playing dice" class="dice">
+      <img src="../images/dice-5.png" alt="Playing dice" class="dice">
       <button class="btn btn--new">🔄 New game</button>
       <button class="btn btn--roll">🎲 Roll dice</button>
       <button class="btn btn--hold">📥 Hold</button>
     </main>
-    <script src="script.js"></script>
+    <script src="script.js"></script>https://github.com/Vohidjonovna/Pig_Game.git
   </body>
 </html>
