--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../assets/style.css" />
   <title>Pig Game</title>
 </head>
 
@@ -33,7 +33,7 @@
     <button class="btn btn--roll">🎲 Roll dice</button>
     <button class="btn btn--hold">📥 Hold</button>
   </main>
-  <script src="script.js"></script>
+  <script src="../assets/script.js"></script>
 </body>
 
 </html>
