--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="../assets/style.css" />
+  <link rel="stylesheet" href="../assets/style/style.css" />
   <title>Pig Game</title>
 </head>
 
@@ -28,12 +28,12 @@
       </div>
     </section>
 
-    <img src="../images/dice-5.png" alt="Playing dice" class="dice">
+    <img src="../assets/images/dice-5.png" alt="Playing dice" class="dice">
     <button class="btn btn--new">🔄 New game</button>
     <button class="btn btn--roll">🎲 Roll dice</button>
     <button class="btn btn--hold">📥 Hold</button>
   </main>
-  <script src="../assets/script.js"></script>
+  <script src="../assets/src/script.js"></script>
 </body>
 
 </html>
